# audio_io

./: .gitignore  LICENSE  README.md  USAGE.md  VERSION.md  pyproject.toml
examples/: README.md  __init__.py  _example_bootstrap.py  input_level_meter.py  list_devices.py  live_waveform_web.py  loopback_sine_level_check.py  sine_output.py
examples/input_level_meter/: README.md  __init__.py  main.py  pyproject.toml  setup.ps1
examples/list_devices/: README.md  __init__.py  main.py  pyproject.toml  setup.ps1  setup.sh
examples/live_waveform_web/: README.md  __init__.py  main.py  pyproject.toml
examples/loopback_sine_level_check/: README.md  __init__.py  main.py  pyproject.toml  setup.ps1
examples/sine_output/: README.md  __init__.py  main.py  pyproject.toml  setup.sh
examples/webview_analysis/: README.md  __init__.py  main.py  pyproject.toml  setup.sh
src/audio_io/: __init__.py  backends.py  config.py  session.py
tests/: fakes.py  test_examples.py  test_session.py  test_sounddevice_backend.py
