[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "audio-io"
version = "0.1.0"
description = "Small Python package for callback and buffer based audio I/O sessions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "audio-io contributors" },
]
dependencies = [
  "numpy>=1.23",
  "sounddevice>=0.4.6",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.poetry]
packages = [
  { include = "audio_io", from = "src" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
