[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "audio-io"
version = "0.1.12"
description = "Small Python package for callback and buffer based audio I/O sessions."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
  { name = "audio-io contributors" },
]
dependencies = [
  "numpy>=1.23",
  "pythonnet>=3.0.5,<4.0; sys_platform == 'win32'",
  "pywebview>=5.0",
  "sounddevice>=0.4.6",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.poetry]
packages = [
  { include = "audio_io", from = "src" },
  { include = "examples" },
]

[project.scripts]
audio-io-list-devices = "examples.list_devices.main:main"
audio-io-sine-output = "examples.sine_output.main:main"
audio-io-input-meter = "examples.input_level_meter.main:main"
audio-io-webview-analysis = "examples.webview_analysis.main:main"
audio-io-loopback-check = "examples.loopback_sine_level_check.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
